--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,10 @@ p{
 
 
 a.twitch:hover {color:#6441a5;letter-spacing: 0.2em;}
+a.youtube:hover {color:#a44141;letter-spacing: 0.2em;}
+a.twitter:hover {color:#4aaabb;letter-spacing: 0.2em;}
+a.tiktok:hover {color:#a44195;letter-spacing: 0.2em;}
+a.discord:hover {color:#4f41a4;letter-spacing: 0.2em;}
 a.music:hover {color:#FFB0A1;letter-spacing: 0.2em;}
 a.connect:hover {color:#A1E7FF;letter-spacing: 0.2em;}
 
